# my-love-website-v2

./: Cargo.toml  Dioxus.toml  Dockerfile  Makefile
.github/workflows/: docker_image.yaml  docker_publish.yaml
assets/: tailwind.css
src/: main.rs  utils.rs
