[package]
name = "love-sentences"
version = "0.1.0"
authors = ["Clelia (Astra) Bertelli <clelia@runllama.ai>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = [] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
getrandom = { version = "0.3.4", features = ["wasm_js"] }
rand = "0.9.2"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]